
//String Definer;
public class BO_SD
{
    //Scene;
    public const string Scene_name = "BreakOut";
    //Object;
    public const string DC_name = "BO_DataController";
    public const string Ball_OBJ_name = "BO_Ball";
    //Animator;
    public const string AniNextStepTrigger_str = "NextStep";
    public const string AniRestartTrigger_str = "ReStart";
    public const string AniStartTrigger_str = "Start";
    //Tags;
    public const string Brick_tag = "BO_Brick";

}
