public static class MD_StrDefiner
{
    public const string ScoreTextPreStr = "Score: ";
    public const string WaveTextPreStr = "Wave: ";
    public const string AmmoTextPreStr = "X ";
    public const string AnimatorNextStepTrigger_str = "NextStep";
    public const string AnimatorStartTrigger_str = "Start";
    public const string AnimatorFinishTrigger_str = "Finish";
    public const string AnimatorStartWaveTrigger_str = "StartWave";
    public const string AnimatorPauseTrigger_str = "Pause";
    public const string AnimatorConfirmTrigger_str = "Confirm";
    public const string AnimatorContinueTrigger_str = "Continue";
    public const string AnimatorYesTrigger_str = "Yes";
    public const string AnimatorNoTrigger_str = "No";
    public const string AnimatorBackBool_str = "Back";
    public const string AnimatorReStartBool_str = "ReStart";
    //public const string rightCG_Oname_str = "RightControllerGroup";  //Right controller Group object name;
    //public const string rightC_Oname_str = "RightController";    //Right controller object name;
    public const string City_tag = "City";
    public const string Missile_tag = "MD_Missile";
    public const string TargetBorder_tag = "MD_TargetBorder";
    public const string GameController_name = "MD_GameController";
    public const string UIController_name = "MD_UIController";

}